# mobile-robotics

./: .gitignore  AGENT.md  CONTRIBUTE.md  Dockerfile  README.md  docker-compose.yml  frames.gv  install_ros2_foxy_dependencies.sh  record_odom.py  ros_entrypoint.sh
install/: local_setup.sh  setup.sh
log/: latest_build
src/ackermann_control_bridge/: package.xml  setup.cfg  setup.py
src/ackermann_control_bridge/ackermann_control_bridge/: Dropped Text.txt  ackermann_bridge_node.py  ackermann_odometry_node.py  ackermann_odometry_node.py.old
src/ackermann_control_bridge/docs/: ackermann_bridge.md  ackermann_odometry_node.md  odometry.md
src/ackermann_control_bridge/launch/: odometry.launch.py
src/ackermann_robot_description/: CMakeLists.txt  package.xml
src/ackermann_robot_description/config/: ekf.yaml  ros2_control.yaml
src/ackermann_robot_description/worlds/: empty.world  (+1 more)
src/ackermann_robot_navigation/: CMakeLists.txt  package.xml
src/ackermann_robot_navigation/docs/: mapping.md
src/ackermann_robot_navigation/launch/: ackermann_control.launch.py  ackermann_description.launch.py  bringup_all.launch.py  nav2.launch.py  nav2_bringup.launch.py  rviz.launch.py
src/ackermann_robot_navigation/maps/: ackermann_steering_map.pgm  ackermann_steering_map.yaml
src/ackermann_robot_navigation/params/: nav2_params.custom.yaml  nav2_params.yaml  nav2_params.yaml.old  nav2_params_updated.yaml  nav2_planners_controllers.yaml
src/ackermann_robot_navigation/rviz/: config.rviz  config_navigation.rviz
src/ackermann_robot_navigation/scripts/: publish_initial_pose.py
(+55 files in other folders)
